feat:調整收藏api與新增收藏swagger,調整邀請api可以顯示是否收藏
